welcome.lessons.welcome.array.averagevalue.AverageValue.scala.error
averageValue:3: error: not found: value mums
	for (i<-0 to mums.lenths) {}
                     ^