welcome.lessons.welcome.array.averagevalue.AverageValue.scala.code
def averageValue(nums:Array[Int]): Int = {
	var S = 0
	for (i<-0 to mums.lenths) {}
}
